# voice-lab

./: .dockerignore  .eslintignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.yml  reproduce_transcript_bug.py
backend/: .env.example  .env.test  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260116_222743_add_tts_tables.py  20260118_100000_add_provider_credential_tables.py  20260119_200000_add_interaction_tables.py  20260120_100000_add_jobs_table.py  20260121_100000_add_scenario_templates.py  20260121_110000_add_role_scenario_to_sessions.py  20260122_100000_add_voice_cache_enhancement.py  20260129_100000_add_dj_tables.py  20260129_100000_add_music_generation_jobs.py  20260129_100001_add_music_generation_jobs.py  20260129_110000_add_voice_customization.py  20260130_100000_add_missing_providers_fix_types.py  20260130_100000_fix_voice_sync_jobs_schema.py  20260130_100001_fix_voice_sync_jobs_schema.py  20260131_100000_add_provider_to_music_jobs.py  20260206_100000_add_speaker_id_to_word_timings.py  20260207_100000_add_single_tts_job_type.py  20260207_200000_add_storypal_tables.py  20260220_100000_add_provider_metadata_to_music_jobs.py  20260221_100000_add_cancelled_to_music_status.py  37230f605b1b_merge_stt_and_interaction_branches.py  477f0ffdd804_add_stt_tables.py  96b1d21df7c8_merge_jobs_table.py
backend/src/: __init__.py  config.py  main.py
backend/src/application/: __init__.py
backend/src/application/dto/: __init__.py
backend/src/application/interfaces/: __init__.py  llm_provider.py  multi_role_tts_provider.py  music_provider.py  storage_service.py  stt_provider.py  tts_provider.py  voice_cache_repository.py  voice_sync_job_repository.py
backend/src/application/services/: audit_service.py  dj_service.py  job_service.py  stt_service.py
backend/src/application/use_cases/: __init__.py  add_provider_credential.py  base.py  bulk_update_voice_customization.py  compare_providers.py  delete_provider_credential.py  generate_voice_preview.py  get_voice_customization.py  list_provider_credentials.py  list_provider_models.py  list_voices.py  list_voices_with_customization.py  log_synthesis.py  revalidate_credential.py  story_experience.py  sync_voices.py  synthesize_long_text.py  synthesize_multi_role.py  synthesize_speech.py  transcribe_audio.py  update_provider_credential.py  update_voice_customization.py  validate_provider_key.py  voice_interaction.py
backend/src/domain/: __init__.py  errors.py  text_processing.py
backend/src/domain/config/: provider_limits.py
backend/src/domain/entities/: __init__.py  audio.py  audio_file.py  audit_log.py  conversation_turn.py  dj.py  ground_truth.py  interaction.py  interaction_enums.py  interaction_session.py  job.py  latency_metrics.py  long_text_tts.py  multi_role_tts.py  music.py  provider.py  provider_credential.py  scenario_template.py  story.py  stt.py  system_prompt_template.py  test_record.py  tts.py  voice.py  voice_customization.py  voice_sync_job.py  wer_analysis.py
backend/src/domain/repositories/: __init__.py  audit_log_repository.py  interaction_repository.py  job_repository.py  music_job_repository.py  provider_credential_repository.py  scenario_template_repository.py  test_record_repository.py  transcription_repository.py  voice_customization_repository.py  voice_repository.py
backend/src/domain/services/: __init__.py  dialogue_parser.py  text_splitter.py  usage_tracker.py  voice_metadata_inferrer.py  wer_calculator.py
backend/src/domain/utils/: masking.py
backend/src/infrastructure/: __init__.py  concurrency.py
backend/src/infrastructure/auth/: __init__.py  domain_validator.py  jwt.py
backend/src/infrastructure/logging/: __init__.py  interaction_logger.py
backend/src/presentation/: __init__.py
backend/tests/: __init__.py  conftest.py
backend/tests/benchmark/: test_synthesis_perf.py
backend/tests/contract/: test_add_credential.py  test_delete_credential.py  test_interaction_api.py  test_interaction_provider_credential_status.py  test_interaction_providers_mapping.py  test_interaction_repository.py  test_jobs_api.py  test_list_credentials.py  test_list_models.py  test_music_cancel_restart_api.py  test_quota_api.py  test_stt_compare_contract.py  test_stt_history_contract.py  test_stt_provider_credential_status.py  test_stt_providers_contract.py  test_stt_transcribe_contract.py  test_stt_wer_contract.py  test_tts_api.py  test_update_credential.py  test_validate_credential.py  test_voices_api.py  test_websocket_protocol.py
backend/tests/integration/: test_auth_integration.py  test_azure_speech_integration.py  test_cascade_conversation.py  test_credential_crud.py  test_gemini_gcp_tts_switching.py  test_job_worker_e2e.py  test_job_workflow.py  test_multi_provider.py  test_multi_role_tts.py  test_provider_status.py  test_realtime_conversation.py  test_stt_recording_integration.py  test_stt_upload_integration.py  test_web_flow.py
backend/tests/performance/: __init__.py  test_credential_performance.py
backend/tests/unit/: test_audit_logging.py  test_auth_middleware.py  test_azure_ssml_builder.py  test_azure_storybook_voices.py  test_azure_stt_convert_to_wav.py  test_azure_stt_diarization.py  test_cascade_mode.py  test_config_parsing.py  test_credential_update.py  test_domain_validator.py  test_gcp_tts.py  test_gemini_tts.py  test_interaction_handler_config.py  test_interaction_mode_factory.py  test_latency_tracker.py  test_long_text_synthesis.py  test_new_provider_validators.py  test_params.py  test_provider_entity_llm_type.py  test_provider_quota_detection.py  test_provider_validators.py  test_providers.py  test_realtime_mode.py  test_stt_provider_child_mode.py  test_stt_route_quota_tracking.py  test_stt_service.py  test_synthesize_speech_quota_propagation.py  test_text_splitter.py  test_tts_route_quota_tracking.py  test_usage_tracker.py  test_validation.py  test_validator_registry_completeness.py  test_voice_customization.py  test_wer_calculator.py
(+645 files in other folders)
