[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-lab"
version = "0.1.0"
description = "Voice Provider Testing Platform - TTS, STT, and Interaction testing for multiple providers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Voice Lab Team"}
]
keywords = ["voice", "tts", "stt", "speech", "testing", "azure", "gcp", "elevenlabs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Redis
    "redis>=5.0.0",
    # HTTP client
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    # Voice Providers & Pipecat
    "pipecat-ai[azure,elevenlabs]>=0.0.50",
    "google-cloud-speech>=2.23.0",
    "google-cloud-texttospeech>=2.16.0",
    "azure-cognitiveservices-speech>=1.35.0",
    "elevenlabs>=1.0.0",
    # Auth
    "google-auth>=2.27.0",
    "PyJWT>=2.8.0",
    # LLM
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    # Note: Gemini uses httpx (already included above) for API calls
    # Audio processing
    "pydub>=0.25.0",
    # Cloud Storage
    "aioboto3>=12.0.0",
    # Utils
    "cachetools>=5.3.0",
    "structlog>=24.1.0",
    "greenlet>=3.3.0",
    "deepgram-sdk>=5.3.1",
    "assemblyai>=0.48.4",
    "speechmatics-python>=5.0.0",  # Legacy SDK, provides speechmatics.batch_client
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-requests",
    "types-redis",
    "types-aiofiles",
    "types-cachetools",
]

[project.urls]
Homepage = "https://github.com/voice-lab/voice-lab"
Repository = "https://github.com/voice-lab/voice-lab"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "UP042",  # prefer StrEnum over (str, Enum) — TODO: migrate in separate PR
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002", "SIM117"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration
[tool.mypy]
python_version = "3.11"
# Relaxed strict mode for gradual typing adoption
strict = false
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
show_error_codes = true
show_column_numbers = true
pretty = true
# Ignore missing return type for now
no_implicit_optional = false
# Allow Any
disallow_any_generics = false
# Ignore missing imports globally - packages have inline types but mypy sometimes can't find them
ignore_missing_imports = true
# Disable strict override and attribute checks for now
disable_error_code = ["override", "attr-defined", "call-arg", "arg-type", "abstract", "assignment", "operator", "union-attr", "var-annotated", "misc", "return-value"]

[[tool.mypy.overrides]]
module = [
    "elevenlabs.*",
    "azure.*",
    "google.cloud.*",
    "uvicorn.*",
    "aiofiles.*",
    "pydub.*",
    "redis.*",
    "pipecat.*",
    "google.auth.*",
    "google.oauth2.*",
    "aioboto3.*",
    "structlog.*",
    "anthropic.*",
    "openai.*",
    "httpx.*",
    # Web framework and core dependencies
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "starlette.*",
    "sqlalchemy.*",
    "alembic.*",
    "asyncpg.*",
    "websockets.*",
    # STT providers
    "speechmatics.*",
    "assemblyai.*",
    "deepgram.*",
    # Auth and utils
    "boto3.*",
    "botocore.*",
    "jwt.*",
    "jose.*",
    "dotenv.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
# Omit WebSocket/external API services from coverage
# These require integration tests with external APIs
omit = [
    "*/domain/services/interaction/openai_realtime.py",
    "*/domain/services/interaction/gemini_realtime.py",
    "*/domain/services/interaction/cascade_mode.py",
    "*/domain/services/interaction/cascade_mode_factory.py",
    "*/domain/services/interaction/realtime_mode.py",
    # Also omit presentation layer (API routes) - tested via integration tests
    "*/presentation/*",
    # Also omit infrastructure adapters - tested via integration tests
    "*/infrastructure/adapters/*",
    "*/infrastructure/websocket/*",
    # Omit persistence layer - requires database for integration tests
    "*/infrastructure/persistence/*",
    # Omit provider implementations - require external API keys for integration tests
    "*/infrastructure/providers/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
# Coverage threshold adjusted for project with WebSocket/external API integrations
# - WebSocket services (openai_realtime, gemini_realtime, cascade_mode) require integration tests
# - Presentation layer routes are tested via integration tests
# - Infrastructure adapters require mocking external services
# Note: CI may show lower coverage when integration tests are skipped (no database available)
fail_under = 47
